--- a/activities.html
+++ b/activities.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="./images/logo.svg" alt="">
+            <img src="./images/logo.png" alt="">
         </div>
         <ul class="links">
             <li class="link"><h4><a href="./index.html">Home</a></h4></li>
@@ -32,7 +32,7 @@
      <div class="mobile-menu">
         <i class="ri-close-circle-fill close"></i>
         <div class="logo">
-            <img src="./images/logo.svg" alt="">
+            <img src="./images/logo.png" class="logo" alt="">
         </div> 
         <ul class="links">
             <li class="link"><h4><a href="./index.html">Home</a></h4></li>
