--- a/activities.html
+++ b/activities.html
@@ -60,14 +60,14 @@
                     <img src="./images/ac1.jpg" alt="">
                 </div>
                 <div class="sec-3-con2">
-                    <h2>Computer Science</h2>
-                    <p>Hands-on experience with the latest programming languages and technology. We have trained IT professionals who work closely with our students so they are prepared for the real world.</p>
+                    <h2>Athletics</h2>
+                    <p>Our students are passionate about sports and athletics and have the freedom to choose the one they like and wish to take up. We also participate in inter-school, district, state and national level competitions.</p>
                 </div>
             </div>
             <div class="sec-3-con">
                 <div class="sec-3-con2">
-                    <h2>Fine Arts</h2>
-                    <p>Giving wings to the artists who’d like to take it up as a career or just a hobby. Our students are trained by professionals who help them develop, learn and polish their skills while at school.</p>
+                    <h2>In-house Publications</h2>
+                    <p>We have several writers who are encouraged to come up with creations that are regularly published in our in-house magazines. We host a book sale every 2 years to promote our writers and their work.</p>
                 </div>
                 <div class="sec-3-con1">
                     <img src="./images/ac2.jpg" alt="">
@@ -78,8 +78,8 @@
                     <img src="./images/ac3.jpg" alt="">
                 </div>
                 <div class="sec-3-con2">
-                    <h2>Humanities</h2>
-                    <p>The study of ancient and modern languages, philosophy, history, and more. We take pride in offering top humanity courses from a dedicated and trained staff</p>
+                    <h2>Performing Arts & Music</h2>
+                    <p>With professionals on board, we take pride in training our students in art forms like dance, drama, painting and more. We organize exhibitions, concerts and musical events to encourage our students to own their talent and flourish in those fields.</p>
                 </div>
             </div>
           </div>
