--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
          </div>
          <div class="slideCon">
             <div class="line"></div>
-            <h1>The Champion School Texas</h1>
+            <h1>The Study World Texas</h1>
             <p>This is where we teach students skills they need to transform themselves, others, and our global communities</p>
             <button><a href="./academics.html">Our Academics</a></button>
         </div>
@@ -75,7 +75,7 @@
             <div class="sec-2-1">
                 <h1>Learning Begins With Us</h1>
                 <div class="line top"></div>
-                <p>We, at Champion School offer supportive and inspirational environments for young enquiring minds to learn and grow with us. Our passion for learning means we achieve more than outstanding results. We strive to build confident and creative thinkers and aim at delivering an education that is truly relevant to their future.</p>
+                <p>We, at Study World offer supportive and inspirational environments for young enquiring minds to learn and grow with us. Our passion for learning means we achieve more than outstanding results. We strive to build confident and creative thinkers and aim at delivering an education that is truly relevant to their future.</p>
             </div>
             <div class="sec-2-2">
                 <div class="line"></div>
@@ -86,7 +86,7 @@
           </section>
           <!-- Counter -->
            <section id="counter">
-            <h3>Champion School at a Glance</h3>
+            <h3>Study World at a Glance</h3>
             <div class="counters">
                 <div class="counter">
                     <h1><span class="fCount" data-count="2"></span>K+</h1>
@@ -122,7 +122,7 @@
                     <h2>Curriculum <br> Overview</h2>
                     <div class="sec-6-top-2">
                         <div class="line"></div>
-                        <p>The Champion School aims at offering all our students a broad and balanced curriculum that provides rewarding and stimulating activities to prepare them for the best social and cultural life.
+                        <p>The Study World aims at offering all our students a broad and balanced curriculum that provides rewarding and stimulating activities to prepare them for the best social and cultural life.
                         </p>
                     </div>
                 </div>
@@ -207,7 +207,7 @@
                 <footer>
                     <div class="footer-1">
                         <div class="footer1-1">
-                            <h2>The Champion School Texas​</h2>
+                            <h2>The Study World Texas​</h2>
                             <ul>
                                 <li>1234 Demo Ave, Austin, TX 56789,</li>
                                 <li>United States.</li>
